[package]
name = "k2tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv="1.1"
rand="0.8.4"
# Dont forget to delete csv dependency
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
